@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Issue #1096: Prevent a segfault from getting the repr of a very deeply nested
+  list by using the recursion counter.
+
 - Issue #1202533: Fix infinite recursion calls triggered by calls to
   PyObject_Call() never calling back out to Python code to trigger recursion
   depth updates/checks.  Required the creation of a static RuntimeError
